--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/hooks": "^7.1.2",
     "@types/swiper": "^6.0.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.2.3",
